--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,10 @@
 
 html,
 body {
+  background-repeat: no-repeat;
+  background-image: url('../public/svgs/wave-haikei2.svg');
+  background-size: 200vw;
+  background-position: 90% 0%;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -19,12 +23,60 @@ a {
   box-sizing: border-box;
 }
 
+.hamburger {
+  cursor:pointer;
+  width: 24px;
+  height: 24px;
+  transition: all 0.25s;
+  position: relative;
+}
+
+.hamburger-top,
+.hamburger-middle,
+.hamburger-bottom {
+  position:absolute;
+  top:0;
+  left:0;
+  width: 24px;
+  height: 2px;
+  background: white;
+  transform:rotate(0);
+  transition: all 0.5s;
+}
+
+.hamburger-middle {
+  transform: translateY(7px);
+}
+
+.hamburger-bottom {
+  transform: translateY(14px);
+}
+
+.open {
+  transform: rotate(90deg);
+  transform: translateY(0px);
+}
+
+.open .hamburger-top {
+  transform: rotate(45deg) translateY(6px) translate(6px);
+}
+
+.open .hamburger-middle {
+  display: none;
+}
+
+.open .hamburger-bottom {
+  transform: rotate(-45deg) translateY(6px) translate(-6px);
+}
+
+
+
+/*
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
   body {
     color: white;
-    background: black;
   }
-}
+} */
